website/versioned_docs/version-0.12-alpha/accordproject-tooling.md
---
id: version-0.12-alpha-accordproject-tooling
title: Developers Tools
original_id: accordproject-tooling
---

Several tools are available in order to help you develop your own smart legal templates.

## Visual Studio Code Extension

An extension is available for the popular open-source code editor [Visual Studio Code](https://code.visualstudio.com/). 
This highlights syntax and parsing errors for Ergo and Template Grammar Files. Syntax highlighting for Composer Concerto models is available in a [separate plugin](https://marketplace.visualstudio.com/items?itemName=HyperledgerComposer.composer-support-client).

Install the plugin from the [Visual Studio marketplace](https://marketplace.visualstudio.com/items?itemName=accordproject.accordproject-vscode-plugin).

![VSCode plugin](/img/ergo-vscode.png)

## Syntax highlighting

Languages modes in a couple of other editors offer syntax highlighting for Ergo.

### Emacs

A simple Emacs mode for Ergo can be found in the [ergo-mode](https://github.com/accordproject/ergo-mode) project on GitHub.

### VIM

A simple VIM mode for Ergo can be found in the [ergo.vim](https://github.com/accordproject/ergo/tree/master/ergo.vim) directory in the Ergo source code on GitHub.

> Those are not maintained as actively as the rest of the Accord Project. If you know emacs lisp or are a VIM user and would like to contribute, please contact us on the Accord Project Slack or directly through GitHub!

## Template Studio

Finally, [Template Studio](https://studio.accordproject.org) lets you create, edit and test legal clause or contract templates built with the Accord Project directly from your browser, without having to install anything.

![Model Repository](/img/studio.png)
