website/versioned_docs/version-0.12.0/accordproject-tooling.md
---
id: version-0.12.0-accordproject-tooling
title: Developers Tools
original_id: accordproject-tooling
---

Several tools are available in order to help you develop your own smart legal templates.

## Visual Studio Code Extension

An extension is available for the popular open-source code editor [Visual Studio Code](https://code.visualstudio.com/). 
This provides syntax highlighting, and error reporting when working on source Ergo logic and on Cicero templates. Syntax highlighting for Composer Concerto models is available in a [separate plugin](https://marketplace.visualstudio.com/items?itemName=HyperledgerComposer.composer-support-client).

Install the Accord Project extension by visiting the [Visual Studio marketplace](https://marketplace.visualstudio.com/items?itemName=accordproject.accordproject-vscode-plugin).

![A block of code that is a “contract”. Within the contract there is another block of code that is a “clause”. The clause contains a variable called status and returns a new instance of the InspectionResponse object.](/img/ergo-vscode.png)

## Syntax highlighting

Languages modes, which provide syntax highlighting for Ergo, also exist for a couple of other editors.

### Emacs

A simple Emacs mode for Ergo can be found in the [ergo-mode](https://github.com/accordproject/ergo-mode) project on GitHub.

### VIM

A simple VIM mode for Ergo can be found in the [ergo.vim](https://github.com/accordproject/ergo/tree/master/ergo.vim) directory in the Ergo source code on GitHub.

> Those are not maintained as actively as the rest of the Accord Project. If you know emacs lisp or are a VIM user and would like to contribute, please contact us on the Accord Project Slack or directly through GitHub!

## Template Studio

Finally, [Template Studio](https://studio.accordproject.org) lets you create, edit and test legal clause or contract templates built with the Accord Project directly from your browser, without having to install anything.

![An example of a .tem file. There are 3 paragraphs of a contract with binding variables incorporated in each paragraph](/img/studio.png)
